app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-assignment
  labels:
    name: eks-assignment
    environment: dev
